--- a/src/main/resources/baza/sample.fxml
+++ b/src/main/resources/baza/sample.fxml
@@ -22,7 +22,7 @@
          <bottom>
             <Pane prefHeight="54.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button layoutX="254.0" layoutY="14.0" mnemonicParsing="false" text="Zapisz dane" />
+                  <Button layoutX="254.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#saveEditedCell" text="Zapisz dane" />
                   <Button layoutX="52.0" layoutY="14.0" mnemonicParsing="false" text="Dodaj element" />
                   <Button layoutX="447.0" layoutY="14.0" mnemonicParsing="false" text="Wczytaj dane" />
                </children>
